--- a/css/adch_custom.css
+++ b/css/adch_custom.css
@@ -25,7 +25,7 @@ a.logo img {
 }
 .user-name {
 	font-size: 15px;
-    color: white;
+	color: white;
 }
 .company-memo {
 	font-size: 25px;
@@ -50,7 +50,7 @@ a.logo img {
 	}
 	.user-name {
 		font-size: 20px;
-        color: white;
+		color: white;
 	}
 	.company-memo {
 		font-size: 40px;
@@ -114,4 +114,16 @@ a.logo img {
 		background-size: 500%;
 		height: 1000px;
 	}
+}
+
+.bg-action-table {
+	color: #fff;
+	background-color: #963d11;
+	padding: 5px;
+	border-radius: 25px;
+}
+
+.table-spacing {
+	border-collapse: separate !important;
+	border-spacing: 10px !important;
 }
