--- a/css/adch_custom.css
+++ b/css/adch_custom.css
@@ -43,7 +43,7 @@ a.logo img {
 
 @media only screen and (min-width: 1000px) {
 	a.logo img {
-		max-height: 175px !important;
+		max-height: 75px !important;
 	}
 	.footer-logo {
 		max-height: 175px !important;
@@ -80,7 +80,10 @@ a.logo img {
 	}
 }
 @media only screen and (max-width: 1000px) {
-	a.logo img .footer-logo {
+	a.logo img {
+		max-height: 75px !important;
+	}
+	.footer-logo {
 		max-height: 175px !important;
 	}
 	.swiper-slide {
