--- a/css/adch_custom.css
+++ b/css/adch_custom.css
@@ -131,3 +131,45 @@ a.logo img {
 	border-collapse: separate !important;
 	border-spacing: 10px !important;
 }
+
+/* --floating-menu - start */
+#content {
+	position: relative;
+}
+#content a {
+	display: block;
+}
+#stakeholder,
+#menu2,
+#menu3,
+#menu4 {
+	display: none;
+}
+#stakeholder {
+	position: absolute;
+	top: 50px;
+	left: 300px;
+}
+#menu2 {
+	position: absolute;
+	top: 100px;
+	left: 300px;
+}
+#menu3 {
+	position: absolute;
+	top: 250px;
+	left: 20px;
+}
+#menu4 {
+	position: absolute;
+	top: 250px;
+	left: 150px;
+}
+.frame-style {
+	background-color: #fff;
+	color: #000;
+	padding: 15px 15px 1px 5px;
+	border-radius: 25px;
+	border: 1px black solid;
+}
+/* --floating-menu - end */
