--- a/css/adch_custom.css
+++ b/css/adch_custom.css
@@ -40,6 +40,9 @@ a.logo img {
 	bottom: -25px;
 	font-size: 25px;
 }
+.red-phone {
+	height: 900px;
+}
 
 @media only screen and (min-width: 1000px) {
 	a.logo img {
@@ -109,7 +112,10 @@ a.logo img {
 }
 @media only screen and (max-width: 915px) {
 	.section-01 {
-		height: 950px !important;
+		height: 1100px !important;
+	}
+	.red-phone {
+		height: 700px;
 	}
 }
 @media only screen and (max-width: 375px) {
