update bg calendar

--- a/calendar/css/huicalendar.css
+++ b/calendar/css/huicalendar.css
@@ -3,7 +3,7 @@
 	height: 300px;
 	padding: 2px;
 	border: 1px solid #ccc;
-	background: #faf6ee;
+	background: #f4ecdc;
 }
 /* .huicalendar.huicalendar1.huicalendar2 {
 	width: 180px;
